--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
     <head>  
-    <title> Never Gonna Give you up</title> 
+    <title> About me.com</title> 
     <link rel="icon"  href="favicon.ico"/>    
     </head>
    <body style="background-image: url('rickroll.jpg');">
